Bug 1910990 - Don't use ID3D11Query to wait for video copy complete for remote canvas. with AMD GPUs r=gfx-reviewers,lsalzman

With AMD GPUs, crash happened when  ID3D11Query was used for video rendering to remote canvas. Then the ID3D11Query usage needs to be limited only for video overlay with AMD GPUs. To do it, video rendering optimization to remove canvas is disabled when the ID3D11Query usage is detected with AMD GPUs.

GpuProcessQueryId.mOnlyForOverlay is added to deliver the information.

Differential Revision: https://phabricator.services.mozilla.com/D218390