dom/canvas/CanvasRenderingContext2D.cpp
@@ -5446,6 +5446,10 @@ MaybeGetSurfaceDescriptorForRemoteCanvas(
     if (subdescType ==
         layers::RemoteDecoderVideoSubDescriptor::TSurfaceDescriptorD3D10) {
       auto& descD3D10 = subdesc.get_SurfaceDescriptorD3D10();
+      if (descD3D10.gpuProcessQueryId().isSome() &&
+          descD3D10.gpuProcessQueryId().ref().mOnlyForOverlay) {
+        return Nothing();
+      }
       // Clear FileHandleWrapper, since FileHandleWrapper::mHandle could not be
       // cross process delivered by using Shmem. Cross-process delivery of
       // FileHandleWrapper::mHandle is not possible simply by using shmen. When
